--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 name: Tim Klapdor # your name
-header-image: images/home-bg.jpg # image in header
+header-image: images/tim-hd.jpg # image in header
 tagline: "Technology | Design | Education" # your personal tagline 
 city: Wagga Wagga # your city
 country: Australia # your country
 email: tim.klapdor@gmail.com # your email address
 twitter_name: timklapdor # your twitter handle
 github_name:  timklapdor # your github name
-baseurl: "/resume" #base url
+baseurl: # "" base url
 url: # "http://yourdomain.com"
 
 # Build settings
