--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email: tim.klapdor@gmail.com # your email address
 twitter_name: timklapdor # your twitter handle
 github_name:  timklapdor # your github name
 baseurl: # "" base url
-url: # "http://yourdomain.com"
+url: timklapdor.github.io # "http://yourdomain.com"
 
 collections:
  - education: 
