--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,10 @@ collections:
         title: Publication
     profile:
         output: true
-    title: Profile
+        title: Profile
+    skills:
+        output: true
+        title: Skills
 
 # Build settings
 markdown: kramdown
