--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: "Tim Klapdor"
 email: tim.klapdor@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to the resume of Tim Klapdor. Tim trained as a graphic designer and has been working in higher education, originally developing eLearning resources but is now focussed on the underlying technology used in education.  
-baseurl: "/resume-builder" # the subpath of your site, e.g. /blog/
-url: #"http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://timklapdor.com" # the base hostname & protocol for your site
 twitter_username: timklapdor
 github_username:  timklapdor
 
