--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,6 @@ description: > # this means to ignore newlines until "baseurl:"
   Welcome to the resume of Tim Klapdor. Tim trained as a graphic designer and has been working in higher education, originally developing eLearning resources but is now focussed on the underlying technology used in education.  
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://timklapdor.com" # the base hostname & protocol for your site
-twitter_username: timklapdor
-github_username:  timklapdor
-
-
 
 # Collections
 collections:
@@ -42,7 +38,8 @@ collections:
 
 colour: 
     primary: 8b563F # sets the primary link colour
-    secondary: 13a7c7 # sets the hover colour
+    secondary: 354257 # sets the hover colour
+    text: 1a1a1a # sets text colour
     alternatestripe: aaaaaa # sets the alternate background stripe
 
 # Build settings
